--- a/style.css
+++ b/style.css
@@ -5,25 +5,45 @@ h1{
 body{
     color: #54ADEC;
     background-color: #C30A0A;
+    border-left: 10px;
 }
 #con2{
     background-color: black;
+    border-left: 10%;
+    border-right: 10%;
     
 }
 .card{
     position: relative;
     margin-top: 10%;
-    margin-bottom: 70%;
     font-size: 15px;
-    padding-right: 10px;
+    float:center;
+    font-size: 13px;
+    border-right: 13px;
+    border-left: 10px;
+    width: 400px;
+    border-left: 10px;
 }
 #webDev{
-    padding-top: 10%;
+    padding-top: 1.5%;
     position: relative;
-    border-left: 0px;
+    width: 5px;
+    
 }
 
 #col3{
-    padding-top: 10%;
+    padding-top: 1.5%;
     position: relative;
+}
+#con3{
+    background-color: chocolate;
+}
+#left{
+    color: #ffffff;
+}
+#center{
+    color: #ffffff;
+}
+#right{
+    color: #ffffff;
 }
