--- a/styleContact.css
+++ b/styleContact.css
@@ -1,3 +1,11 @@
+form{
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    flex-direction: column;
+    color: #ffffff;
+}
 body{
-    color: blue;
+    background-color: black;
+
 }
