--- a/stylePort.css
+++ b/stylePort.css
@@ -1,3 +1,8 @@
-.card-deck{
-    justify-content: right;
+#row2{
+    margin-top: 10px;
+    border-top: 10px;
+    padding-left: 20px;
+}
+#row1{
+    margin-bottom: 10px;
 }
