Put text on buttons

--- a/stylePort.css
+++ b/stylePort.css
@@ -6,3 +6,11 @@
 #row1{
     margin-bottom: 10px;
 }
+body{
+    background-color: black;
+}
+div{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: black;
+}
